core/compiler/tests/programs/ok/import_function_depth_3/A.loz
import B

// Should 2 + 5 = 7
main = b 1 + c 2