core/compiler/tests/programs/type_err/import_function_transitive/A.loz
import B

main = b 1 + c 2